# lez-multisig

./: .gitignore  Cargo.toml  LICENSE-APACHE-v2  LICENSE-MIT  Makefile  multisig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  e2e.yml  spel-compat.yml  update-spel-rc.yml
cli/: Cargo.toml
e2e_tests/: Cargo.toml
e2e_tests/tests/: check_imgid.rs  debug_all.rs  debug_pda_final.rs  e2e_member_management.rs  e2e_multisig.rs  test_pda_match.rs  test_proposal_pda.rs
idl-gen/: Cargo.toml
idl-gen/src/: main.rs
lez-multisig-ffi/: Cargo.toml  cbindgen.toml
lez-multisig-ffi/include/: lez_multisig.h
lez-multisig-ffi/src/: lib.rs
methods/guest/: Cargo.toml
multisig_core/: Cargo.toml
multisig_core/src/: lib.rs
multisig_program/: Cargo.toml
multisig_program/src/: approve.rs  create_multisig.rs  create_multisig.rs.rej  execute.rs  lib.rs  propose.rs  propose_config.rs  reject.rs
scripts/: demo-v2.sh  mock-codex.py
