[workspace]
resolver = "2"
members = [
    "idl-gen",
    "multisig_core",
    "multisig_program",
    "methods",
    "methods/guest",
    "e2e_tests",
    "lez-multisig-ffi",
    "cli",
]

[workspace.dependencies]
risc0-zkvm = { version = "=3.0.5", features = ['std'] }
risc0-build = "=3.0.5"
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b", features = ["host"] }
borsh = "1.5.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
