[package]
name = "lez-multisig-e2e"
version = "0.1.0"
edition = "2024"

[[test]]
name = "e2e_multisig"
path = "tests/e2e_multisig.rs"

[[test]]
name = "e2e_member_management"
path = "tests/e2e_member_management.rs"

[dependencies]
multisig_core = { path = "../multisig_core" }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b", features = ["host"] }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
token_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
risc0-zkvm = "3.0"
borsh = "1.5"
tokio = { version = "1", features = ["full"] }

lez-multisig-ffi = { path = "../lez-multisig-ffi" }

[lib]
path = "src/lib.rs"
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
jsonrpsee-http-client = "0.24"
hex = "0.4"
