[package]
name = "lez-multisig-e2e"
version = "0.1.0"
edition = "2024"

[[test]]
name = "e2e_multisig"
path = "tests/e2e_multisig.rs"

[[test]]
name = "e2e_member_management"
path = "tests/e2e_member_management.rs"

[dependencies]
multisig_core = { path = "../multisig_core" }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1", features = ["host"] }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
token_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
risc0-zkvm = "3.0"
borsh = "1.5"
tokio = { version = "1", features = ["full"] }

lez-multisig-ffi = { path = "../lez-multisig-ffi" }
hex = "0.4"
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1", features = ["client"] }


spel-framework = { git = "https://github.com/logos-co/spel.git", rev = "093ccf9" }

[lib]
path = "src/lib.rs"

[[test]]
name = "debug_pda"
path = "tests/debug_pda.rs"

[[test]]
name = "debug_pda2"
path = "tests/debug_pda2.rs"

[[test]]
name = "debug_serde"
path = "tests/debug_serde.rs"
[[test]]
name = "debug_imgid"
path = "tests/debug_imgid.rs"
[[test]]
name = "debug_instr_serde"
path = "tests/debug_instr_serde.rs"
