[package]
name = "lez-multisig-idl-gen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate_idl"
path = "src/main.rs"

[dependencies]
multisig_program = { path = "../multisig_program" }
spel-framework = { git = "https://github.com/jimmy-claw/spel.git", branch = "jimmy/update-lssa-latest" }
serde_json = "1"
