[package]
name = "lez-multisig-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI wrapper for lez-multisig — enables Logos Core Qt plugin integration"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
multisig_core = { path = "../multisig_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
hex = "0.4"
bs58 = "0.5"

# nssa deps for transaction building
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b", features = ["host"] }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
borsh = "1.5"
sha2 = "0.10"
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
