[package]
name = "multisig_core"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
borsh = "1.5.7"
sha2 = { version = "0.10", default-features = false }
