[package]
name = "multisig_program"
version = "0.1.0"
edition = "2024"

[dependencies]
multisig_core = { path = "../multisig_core" }
nssa_core.workspace = true
spel-framework = { git = "https://github.com/logos-co/spel.git", rev = "2f2bf79" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
borsh.workspace = true
risc0-zkvm.workspace = true
